# -*- mode: org -*-

* v3.1.0    UNRELEASED

- Added new option ~epkg-list-exclude-types~, generalizing and
  replacing option ~epkg-list-packages-omit-shelved~.

- The description created by ~epkg-describe-package~ now warns about
  package that are fetched over an insecure connection or from an
  insecure source.  (This is no guarantee that other packages are
  safe.)

- Command ~epkg-list-matching-packages~ now also matches against
  package names, not only their summary.

- Imported commands from Emir that visit files located inside
  ~epkg-repository~.

- Imported function ~epkg-repository~ and ~with-epkg-repository~
  from Emir.

- Renamed library ~epkg-util.el~ to ~epkg-org.el~.

* v3.0.0    2017/09/19

- Melpa and GNU Elpa recipes are now stored as objects.  These recipes
  can still be accessed as slots of Epkg objects, but they can also be
  accessed using the functions ~melpa-recipes~, ~melpa-get~, ~gelpa-recipes~,
  and ~gelpa-get~.

- Added new library ~epkg-util.el~ containing some utilities that are
  intended for use elsewhere but not by Epkg itself.  Currently this
  is limited to tools useful when generating Org tables.

- The functions ~epkg-type~ and ~epkg-package-types~ were removed.
  Use ~closql--class-abbrevs~ and ~closql--list-subabbrevs~ instead.

* v2.3.0    2017/03/01

- The function ~epkg-provided~ no longer returns bundles libraries,
  unless its new ~include-bundled~ argument is non-nil.

- The function ~epkg-reverse-dependencies~ now sorts not only the
  packages it returns, but also the features belonging to each
  of those package.

- Various documentation updates and improvements.

* v2.2.0    2017/01/31

- The new function ~epkg-provided-by~ returns the package that provides
  a given feature.  It replaces ~epkg--required~, which did the same
  thing, but also guessed the package for certain features (those
  involving autoload, version, and test libraries) in case the Epkg